# inspireface-trial

./: .gitignore  README.md  attendance-people-data.json  config.py  face_database.db  face_database.pkl  face_recognizer.py  id_name_map.json  id_name_map.pkl  inspireface-0.0.0-cp312-cp312-linux_aarch64.whl  main.py  pyproject.toml  super_test.py
docs/: About the Project.md  ipc_communication.md
python/: inspireface-0.0.0-cp310-cp310-linux_aarch64.whl
src/: config.py  logger.py  main.py  schema.py  test_ipc.py  utils.py
src/api/: people.py  server.py  session.py
src/core/: face_recognizer.py
src/ipc/: __init__.py  socket_client.py  socket_server.py
src/scripts/: bulk_import_people.py
src/ui/: app.py
