[project]
name = "insight-face-trial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.17"
dependencies = [
    "opencv-python>=4.11.0.86",
    "click>=8.1.7",
    "paddlepaddle>=2.6.0",
    "setuptools>=80.9.0",
    "requests>=2.31.0",
    "inspireface",
]

[tool.uv.sources]
inspireface = { path = "../InspireFace/python/dist/inspireface-0.0.0-cp310-cp310-linux_aarch64.whl" }
