[project]
name = "axon-attendance"
version = "0.1.0"
description = "An attendance system for Vicharak Axon using Inspireface SDK"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "opencv-python>=4.11.0.86",
    "requests>=2.31.0",
    "inspireface>=1.2.3.post3",
    "pyside6>=6.9.1",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "uuid-extension>=0.2.0",
    "peewee>=3.18.2",
    "pytz>=2025.2",
]